apps/staging/service-demo-3/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-demo-3
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: service-demo-3
        image: reg.garrytest.com/demo/service-demo-3:tag # {"$imagepolicy": "flux-system:ns-staging-service-demo-3"}
      imagePullSecrets:
      - name: regkey
